<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="20dp">

    <Button
        android:id="@+id/return_Btn_ClassMenu"
        android:layout_width="73dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/returnbtn" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/className"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp">

        <Button
            android:id="@+id/kidPlanet"
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:background="@drawable/background4title"
            android:text="@string/KidPlanet"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <Button
            android:id="@+id/Res4Kids"
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:layout_below="@id/kidPlanet"
            android:layout_marginTop="30dp"
            android:background="@drawable/background4title"
            android:text="@string/Res4Kid"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <Button
            android:id="@+id/KidSharePic"
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:layout_below="@id/Res4Kids"
            android:layout_marginTop="30dp"
            android:background="@drawable/background4title"
            android:text="@string/KidSharePic"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/className"
        android:layout_width="220dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background4title"
        android:gravity="center"
        android:text="@string/ClassName"
        android:textColor="@color/colorWhite"
        android:textSize="45sp" />

</RelativeLayout>