<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/welcomeTip"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/toKids"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/kid_login_tip"
            android:background="@drawable/background4title"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:id="@+id/toTeacher"
            android:text="@string/teacher_login_tip"
            android:textSize="30sp"
            android:background="@drawable/background4title"
            android:layout_below="@id/toKids"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="30dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/welcomeTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/welcome"
        android:textColor="@color/colorWhite"
        android:textSize="40sp" />
</RelativeLayout>