<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/kidAvatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/avatar1"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kidAvatar"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/uploadPic"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:background="@drawable/background4title"
            android:text="@string/uploadPic"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <Button
            android:id="@+id/takePhoto"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_below="@id/uploadPic"
            android:layout_marginTop="20dp"
            android:background="@drawable/background4title"
            android:text="@string/takePhoto"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <Button
            android:id="@+id/tagPlanet"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_below="@id/takePhoto"
            android:layout_marginTop="20dp"
            android:background="@drawable/background4title"
            android:text="@string/tagPlanet"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

    </RelativeLayout>

</RelativeLayout>