<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <RelativeLayout
        android:layout_width="327dp"
        android:layout_height="91dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/searchInput">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background4title" />

        <RelativeLayout
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="230dp"
                android:layout_height="75dp"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/searchIcon"
                android:hint="@string/Hint4Search"
                android:maxLines="1"
                android:textColorHint="@color/colorWhite"
                android:textSize="27sp" />

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:src="@drawable/search" />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/decorationAlians"
        android:layout_below="@id/searchInput">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <Button
                android:id="@+id/btn1"
                android:layout_width="118dp"
                android:layout_height="114dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:text="@string/Src4Rec01"
                android:textSize="35sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/planet01" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="91dp"
                android:layout_height="91dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="10dp"
                android:scaleType="fitXY"
                android:text="@string/Src4Rec02"
                android:textSize="28sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/planet03" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="245dp"
                android:layout_height="196dp"
                android:layout_below="@id/btn3"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:text="@string/Src4Rec03"
                android:textSize="35sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/planet02" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="187dp"
                android:layout_height="181dp"
                android:layout_below="@id/btn2"
                android:layout_alignEnd="@id/btn3"
                android:layout_marginTop="-60dp"
                android:layout_marginEnd="-15dp"
                android:scaleType="fitXY"
                android:text="@string/Src4Rec04"
                android:textSize="35sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/planet04" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="121dp"
                android:layout_height="115dp"
                android:layout_below="@id/btn4"
                android:layout_marginStart="5dp"
                android:text="@string/Src4Rec05"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/planet05" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="186dp"
                android:layout_height="130dp"
                android:layout_below="@id/btn5"
                android:layout_alignStart="@id/btn2"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-30dp"
                android:text="@string/Src4Rec06"
                android:textSize="40sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/tag6" />

        </RelativeLayout>
    </ScrollView>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-120dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/deco6" />

    <ImageView
        android:layout_width="53dp"
        android:layout_height="111dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="-35dp"
        android:src="@drawable/rocketneko" />

    <ImageView
        android:layout_width="118dp"
        android:layout_height="152dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:src="@drawable/neko2" />

    <ImageView
        android:id="@+id/decorationAlians"
        android:layout_width="120dp"
        android:layout_height="184dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/alians" />

</RelativeLayout>